// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user list item correctly closes modal 1`] = `
.c3 {
  cursor: pointer;
}

.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c2 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
  background-color: #4D02EE;
}

.c4 {
  color: #ED3E2A;
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

<div
  className="c0"
>
  <p
    className="c1"
  />
  <p
    className="c2"
  >
    not admin
  </p>
  <i
    className="c3 c4 far fa-trash-alt"
    onClick={[Function]}
  />
</div>
`;

exports[`user list item correctly opens modal 1`] = `
.c11 {
  max-height: 50px;
  padding: 12px;
  border: none;
  background-color: #4D02EE;
  border-radius: 5px;
  color: white;
  font-family: 'B612',sans-serif;
  font-size: 1rem;
  font-weight: 700;
  cursor: pointer;
}

.c11:hover {
  opacity: 0.90;
}

.c11:focus {
  outline: none;
}

.c11:active {
  opacity: 0.80;
}

.c11:disabled {
  background-color: #3E3E3E;
}

.c11:disabled:hover {
  opacity: 1;
  cursor: auto;
}

.c12 {
  background-color: transparent;
  border: 1px solid #4D02EE;
}

.c6 {
  box-shadow: 0 10px 15px -3px rgba(0,0,0,0.1),0 4px 6px -2px rgba(0,0,0,0.05);
  padding: 40px;
  border-radius: 10px;
  background-color: #1B1B1B;
}

.c5 {
  display: inline;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background-color: rgba(37,37,37,0.6);
}

.c10 {
  display: grid;
  grid-template-columns: [cancel] 1fr [confirm] 1fr;
}

.c13 {
  margin: 20px;
  grid-column: cancel;
}

.c14 {
  grid-column: confirm;
  margin: 20px;
  background-color: #ED3E2A;
}

.c7 {
  display: grid;
  grid-template-rows: [title] 1fr [content] 1.5fr;
  position: fixed;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  width: 100%;
  max-width: 400px;
  background-color: #181818;
}

.c8 {
  grid-row: title;
  width: 75%;
  margin: 0 auto;
  text-align: center;
}

.c9 {
  grid-row: content;
  padding-top: 20px;
}

.c3 {
  cursor: pointer;
}

.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c2 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
  background-color: #4D02EE;
}

.c4 {
  color: #ED3E2A;
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

<div
  className="c0"
>
  <p
    className="c1"
  />
  <p
    className="c2"
  >
    not admin
  </p>
  <i
    className="c3 c4 far fa-trash-alt"
    onClick={[Function]}
  />
  <div
    className="c5"
    onClick={[Function]}
  >
    <div
      className="c6 c7"
    >
      <h2
        className="c8"
      >
        Are you sure you want to delete undefined
      </h2>
      <div
        className="c9"
      >
        <div
          className="c10"
        >
          <button
            className="c11 c12 c13"
            onClick={[Function]}
          >
            Cancel
          </button>
          <button
            className="c11 c14"
            color="#ED3E2A"
            onClick={[Function]}
          >
            Delete
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`user list item render correctly with role 1`] = `
.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c2 {
  float: right;
  width: 80px;
  padding: 4px;
  font-weight: bold;
  text-align: center;
  border-radius: 6px;
  background-color: #4D02EE;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    test
  </p>
  <p
    className="c2"
  >
    admin
  </p>
</div>
`;

exports[`user list item render correctly without role 1`] = `
.c2 {
  cursor: pointer;
}

.c0 {
  min-height: 60px;
  padding: 0px 16px;
  margin: 0px;
  display: grid;
  grid-template-columns: 3fr 1fr 25px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  margin: 0px;
}

.c3 {
  color: #ED3E2A;
  float: right;
  margin-right: 10px;
  grid-column: 3;
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    test
  </p>
  <i
    className="c2 c3 far fa-trash-alt"
    onClick={[Function]}
  />
</div>
`;
